--- a/ZooSystemDB/ZooSystemDB.csproj
+++ b/ZooSystemDB/ZooSystemDB.csproj
@@ -8,10 +8,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Businness\" />
-    <Folder Include="Data\" />
-    <Folder Include="Exceptions\" />
-    <Folder Include="Consts\" />
+    <Compile Remove="EntityIdException.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Exceptions\EntityIdException.cs" />
   </ItemGroup>
 
 </Project>
